add text color change

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
         <ul class="ul-container">
             <li id="temp" class="temp-deets">
                 <h2 class="text">Temperature</h2>
-                <div id="temp-emoji-holder"></div>
+                <div id="temp-emoji-holder">
+                    <button id = "temp-up">⬆️</button>
+                    <button id = "temp-down">⬇️</button>
+                </div>
+                <p id="temp-text">71</p>
             </li>
             <li id="sky" class="deets">
                 <h2 class="text">Sky</h2>
