added reset btn without functionality

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h1>
                     Weather Report
                 </h1>
-                <h2>For the beautiful city of 💕 <span id="headerCityName" class="header-city-name">Seattle</span> 💕</h2>
+                <h2>For the beautiful city of   💕 <span id="headerCityName" class="header-city-name">Seattle</span> 💕</h2>
             </div>
         </header>
         <section class="box sidebar">
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div class="box2 sky">
-                <p>Select Sky</p>
+                <p>Select Sky:</p>
                 <div>
                     <select id="sky-select">
                         <option value="Sunny">Sunny</option>
@@ -45,12 +45,12 @@
             <div class="box3 city">
                 <p class="enter-city">Enter City Name:</p>
                 <input id="city-name" type="text" placeholder="Seattle">
+                <button id="reset">Reset</button>
             </div>
         </section>
         <main class="box main">
             <h2 class="weather-title">Weather Garden</h2>
             <div id="weather-garden">   
-                
                 <div id="allGardenContent" class="all-garden">
                 <div id="sky"></div>
                 <div id="plants"></div>
