--- a/index.html
+++ b/index.html
@@ -22,15 +22,22 @@
             <option value="sunny">Sunny</option>
             <option value="rainy">Rainy</option>
             <option value="snowy">Snowy</option>
+            <option value="snowy">Cloudy</option>
         </select>
     </div>
 
     <div id="city">
-        <form onsubmit='return displayCity();'>City
+        <!-- <form onsubmit='return displayCity();'>City -->
             <input type="text" name="user" size="20" id="user">
-            <input type="submit" id="submit" value="Submit"></input>
-        </form>
-    <div id="emoji-scene">
+            <!-- <input type="submit" id="submit" value="Submit"></input> -->
+            <button id="submit">Submit</button>
+            <!-- add a regular button, remove form container and then it should work -->
+            <button id="reset">Reset</button>
+            <!-- <input type="reset" id="reset" value="reset"></input> -->
+        <!-- </form> -->
+    <div id="sky-scene">
+    </div>
+    <div id="landscape-scene">
     </div>
     <script src="src/index.js" type="text/javascript"></script>
 </body>
