add default text to city field

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div id="city">
         <!-- <form onsubmit='return displayCity();'>City -->
-            <input type="text" name="user" size="20" id="user">
+            <input type="text" size="20" id="city-name" placeholder="City Name">
             <!-- <input type="submit" id="submit" value="Submit"></input> -->
             <button id="submit">Submit</button>
             <!-- add a regular button, remove form container and then it should work -->
