got the temperature button to change colors. added weather landscape function, building out the elif statements

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <div class="topHalf">
         <div class="garden">
             <section id="weatherLandscape">
-
+                <p id="landscape">
+                    hi
+                </p>
             </section>
 
             <section id="weatherSky">
