Trying to get the colors to change once temp reaches certain number

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         
             <div class="temperature__content">
                 <div class="temp__controls">
-                    <span id="tempValue" class="gold">50</span>
+                    <span id="tempValue" class="orange">50</span>
                     <h3>Temperature Controls</h3>
                     <button id="clickIncrease">➕</button>
                     <button id="clickDecrease">➖</button>
