edited placeholder text

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 <body>
     <h1 id="heading">Weather Report</h1>
-    <h2 id="city-title"></h2>
+    <h2 id="city-title">City</h2>
     <div id="temp-box">
         <button id="up">Up</button>
-        <p id="temp">50</p>
+        <p id="temp" style="color:blue">50</p>
         <button id="down">Down</button>
     </div>
     
