--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@ commit 5 - final commit
     <link rel='stylesheet' href='/styles/index.css'>
 </head>
 <body>
-    <div class='overlay sunny'> </div>
-    <div class='overlay cloudy'></div>
-    <div class='overlay rainy'></div>
+    <div class='overlay'> </div>
     <main class='container'>
         <h1 id='h1'>Yay Area</h1>
         <section>
@@ -43,6 +41,9 @@ commit 5 - final commit
             <input type='text' placeholder='Rep your city' id='city-text'></input>
             <button type='reset' id='city-button' class="btn btn-outline-dark btn-sm">Reset</button>
         </section>
+        <div class='landscape'>
+            <img class='landscape' src='/pngwing.com.png'>
+        </div>
     </main>
     <script src='/src/index.js'></script>
 </body>
