--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="styles/index.css" rel="stylesheet"/>
 </head>
 <body>
-    <header>
-    <h1><span class=fancy>S</span>tress<span class=fancy> M</span>eter <span class=fancy>W</span>eather <span class=fancy>R</span>eport</h1>
+    <header id="myHeader">
+        <h1><span class=fancy>S</span>tress<span class=fancy> M</span>eter <span class=fancy>W</span>eather <span class=fancy>R</span>eport</h1>
     </header>
         <main> 
             <h2>For the awesomely amazing student named <span id=student-name>Michelle</span></h2>  
@@ -25,7 +25,7 @@
                 </div>
                 </section>
                 <section id="garden-section">
-                    <h2>Garden of the Soul</h2>
+                    <h2>How you might feel?</h2><br>
                     <div id="weather-content">
                         <div id="sky"></div>
                         <div id="landscape"></div>
@@ -34,26 +34,36 @@
                 </section>
         </section> 
             <section class="bottom-sections">
-                <h2>Sky - Life @ home</h2>
+                <h2>How is life at home?</h2>
                 <div>
                     <select id="sky-dropdown">
+                        <option></option>
                         <option value="Sunny">Sunny</option>
                         <option value="Cloudy">Cloudy</option>
                         <option value="Rainy">Rainy</option>
                         <option value="Snowy">Snowy</option>
                     </select>
                 </div>
+                <br>
             </section>
             <section class="bottom-sections">
+            <section id="name-section">
+            <form>
                 <h2>Student Name</h2>
                 <div>
                     <input type="text" id="name" value="Michelle">
+                    <br>
                     <button id="reset-button">Reset</button>
+                    <br>
+                    <button id="update-button">Update</button>
                 </div>
+            </section>
+            </form>
+            <br>
             </section>
 
         </main>
-    
+    <iframe width="0" height="0" src="https://www.youtube.com/embed/Atp8GPADPDM?controls=0?rel=0&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <script src="src/index.js" type="text/javascript"></script>
 </body>
 </html>
