Figured out how to change landscape with temp

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <header class="main__header">
-        <h1>My Ideal Seasonal Weather Report</h1>
+        <h1>My Seasonal Weather Report</h1>
         <span> for the wonderful city of 
             <span id="headerCityName" class="header__city--name">
                 🍂
@@ -27,7 +27,7 @@
         
             <div class="temperature__content">
                 <div class="temp__controls">
-                    <span id="tempValue" class="orange">50</span>
+                    <span id="tempValue" class="teal">50</span>
                     <h3>Temperature Controls</h3>
                     <button id="clickIncrease">➕</button>
                     <button id="clickDecrease">➖</button>
@@ -41,8 +41,8 @@
             <div id="seasonView" class="season__content">
                 <div id="season">🍂🍁 🍂🍂🍂 🍁🍂 🍂  🍁🍂</div>
             </div>
-            <div id="landscape" class="landscape__content">
-                <div id="ground">🌲🌲🌲🏠🌲🌲🏠🌲🌲🏠🌲</div>
+            <div id="landscapeView" class="landscape__content">
+                <div id="landscape">🌲🌲🌲🏠🌲🌲🏠🌲🌲🏠🌲</div>
             </div>
         </section>
             <select id="seasonSelect">
