Fixed bug in html file

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="styles/index.css" />
   </head>
   <header>
-    <h1 class="accentColors">Show Me The Weather</h1>
-    <h2 class="accentColors">City: Brooklyn</h2>
+    <h1 id="weatherHeader">Show Me The Weather</h1>
+    <h2 id="cityHeader">City: Brooklyn</h2>
   </header>
   <body id="landscape" id="container">
     <img
@@ -38,7 +38,7 @@
           </select>
         </div>
       </section>
-      <section class="accentColors">
+      <section>
           <label for="cityName">Enter a City</label>
           <div>
             <input type="text" id="cityNameSelect" />
