changed city label in html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
       </section>
       <section>
-          <label for="cityName">Enter a City</label>
+          <label for="cityName">Change City</label>
           <div>
             <input type="text" id="cityNameSelect" />
             <button id="cityNameReset">Reset</button>
