adds styling to city input and reset button

--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
         <p id="city-display" class="text">Benicia, CA</p>
     </section>
     <section id="city-input-block" class="card">
-        <h2 class="text">Where ya at?</h2>
-        <input id="city-input" value="Benicia, CA">
-        <button id="city-reset">Reset</button>
+        <section id= "city-input-block-inner">
+            <h2 class="text">Where ya at?</h2>
+            <input id="city-input" value="Benicia, CA">
+            <div id="reset-button">
+                <button id="city-reset">Reset</button>
+            </div>
+        </section>
     </section>
     <section id="temperature-block" class="card">
         <h1 id="temperature-title" class="text">Temperature</h1>
-        <section id="temperature-interact" class="inner-card-container">
+        <section id="temperature-interact" class="temp-card-container">
             <button id="increase-temp">⬆️</button>
             <p id="temperature-display" class="text">72°</p>
             <button id="decrease-temp">⬇️</button>
