added a copyright to footer

--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
     <script src="src/index.js"></script>
   </body>
   <footer class="footer">
-
+    <p>&copy; 2021 Tiffany Harper</p>
   </footer>
 </html>
