Added functionality to reset button

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <option value="rainy">Rainy</option>
             <option value="snowy">Snowy</option>
             <option value="stormy">Stormy</option>
-            <option value="reset">Reset</option>
+            <option value="reset">Default</option>
         </select>
     </section>
     </div>
@@ -58,7 +58,7 @@
             </section>
         <section class="reset-section">
             <h2>RESET</h2>
-            <button>Reset</button>
+            <button id="reset_everything">Reset</button>
         </section>
         </div>
         
