Converts to Celsius

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <h2>CELSIUS</h2>
                 <div class= "temperature-flex-box">
-                    <input class="temperature-digit" id="celsius-temperature" value="35" readonly></input><h4>C°</h4></div>
+                    <input class="celsius-digit" id="celsius-temperature" value="1.66" readonly></input><h4>C°</h4></div>
             </section>
         <section class="reset-section">
             <h2>RESET</h2>
