--- a/index.html
+++ b/index.html
@@ -12,25 +12,34 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cormorant+Garamond:ital@1&family=Fuzzy+Bubbles:wght@700&family=Gwendolyn:wght@700&family=Londrina+Shadow&family=Readex+Pro&display=swap" rel="stylesheet">
 <body>
-    <main class = "container">
+    <section class = "container">
     <header>
-        <h1>☀️ MyWEATHER ⛈ </h1>
+        <h1 id="h1Header">☀️ MyWEATHER ⛈ </h1>
     </header>
     <section id="instructions">
+        <section id="skySelect">
+            <select id="sky">
+                <option value="">Select a sky</option>
+                <option value="sunny">Sunny</option>
+                <option value="cloudy">Cloudy</option>
+                <option value="rainy">Rainy</option>
+                <option value="snowy">Snowy</option>
+            </select>
+        </section>
         <h2 id="inputFormContents">Input your name and location for a weather report made just for you!</h2>
-    </section>
-    <section id = "inputForm">
-        <h3>Tell me a lil about yourself plz🧞</h3>
-        <form id="inputForm">
-            <label for="fname">Your first name:</label>
-            <input type="text" id="fname" name="fname"><br><br>
-            <label for="location">Location:</label>
-            <input type="text" id="location" name="location"><br><br>
-        </form>
-        <button id="inputButton">Submit!</button>
+        <section id="inputFormBox">
+            <h3>Tell me a lil about yourself plz🧞</h3>
+            <form id="inputForm">
+                <label for="fname">Your first name:</label>
+                <input type="text" id="fname" name="fname"><br><br>
+                <label for="location">Location:</label>
+                <input type="text" id="location" name="location"><br><br>
+            </form>
+            <button id="inputButton">Submit!</button>
+        </section>
     </section>
     <section id = "temp-section">
-        <h3>🔥 What's the temp, babes? ❄️</h3>
+        <h3>What's the temp, babes?</h3>
         <h2 id="temperature">68℉</h2>
         <button id="plusButton">➕</button>
         <button id="minusButton">➖</button>
@@ -42,15 +51,7 @@
     </section>
     <section id="landscapeContainer">
     </section>
-    <section id="skySelect">
-        <select name="sky">
-            <option value="">Select a sky</option>
-            <option value="sunny">Sunny</option>
-            <option value="cloudy">Cloudy</option>
-            <option value="rainy">Rainy</option>
-            <option value="snowy">Snowy</option>
-        </select>
-    </section>
+
     <footer>
         <button id="left">👈🏼</button>
         <p id="vibeName"></p>
