--- a/index.html
+++ b/index.html
@@ -26,10 +26,6 @@
                     <option value="snow">Snowy</option>
                 </select>
             </div>
-            <!-- <div class=" item col-3 city-input"><label style="color:white">City:</label>
-                <input type="text" id="inputCity" required minlength="4" maxlength="15" size="20">
-                <button onclick="resetCity()">clear</button>
-            </div> -->
         </div >
         <section >
             <div class="col-3 city-input "><label style="color:gray">City:</label>
@@ -38,13 +34,14 @@
             </div>
             
         </section>    
-        <section class= "container"   >
-            <div class="item sunnyMode formatBoxes" id="tempDisplay" > 
-            <!-- <span id="tempAdjustUp" style="font-size: 3rem;" > 🔼  </span> -->
+        <section class= "container"   > 
+            <div class="item sunnyMode formatBoxes" id="tempDisplay" >
+                <h4>Temperature<br>
                 <button id="tempAdjustUp" class="changeTempButton"  onclick="increment()"> 🔼  </button>
                 <span id="currentTemp" class="tempText">&deg; </span>
                 <button id="tempAdjustLow" class="changeTempButton" onclick="decrement()"> 🔽 </button>
-                <!-- <span id="landScape"> </span> -->
+                </h4>
+            </div>
             </div>
             <div class="item garden formatBoxes">
                 <span >Weather Garden 
@@ -58,7 +55,7 @@
         </section>
         <div>
             <footer class="col-12" id="footer">
-                <div class="footer-text"><h2>&copy; Eunice Gonzalez Regis 2021</h2></div>
+                <div class="footer-text"><h2> ✨ Eunice Gonzalez Regis 2021✨</h2></div>
             </footer>
         </div>
     </main >
