Adds basic CSS elements to all HTML tags

--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
         <input type="text" id="city-text-box">
         <button id="city-reset-button">Change City</button>
     </section>
-    <section id="weather-garden">
+    <section class="weather-display">
         <h1>Weather Garden</h1>
-        <div id="sky-garden"></div>
-        <div id="landscape-garden"></div>
+        <div id="weather-garden">
+            <div id="sky-garden"></div>
+            <div id="landscape-garden"></div>
+        </div>
     </section>
 </body>
 </html>
