finessed font and aesthics of elements

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cormorant+Garamond:ital@1&family=Fuzzy+Bubbles:wght@700&family=Gwendolyn:wght@700&family=Londrina+Shadow&family=Readex+Pro&display=swap" rel="stylesheet">
+    <<link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=Bebas+Neue&family=Cormorant+Garamond:ital@1&family=Fuzzy+Bubbles:wght@700&family=Gwendolyn:wght@700&family=Londrina+Shadow&family=Readex+Pro&display=swap" rel="stylesheet">
 <body>
     <section class = "container">
     <header>
@@ -40,9 +40,9 @@
     </section>
     <section id = "temp-section">
         <h3>What's the temp, babes?</h3>
-        <h2 id="temperature">68℉</h2>
+        <h2 id="temperature">68℉</h2><br>
         <button id="plusButton">➕</button>
-        <button id="minusButton">➖</button>
+        <button id="minusButton">➖</button><br><br>
         <label class="switch" id="switch">
             <input type="checkbox">
             <span class="slider round"></span>
@@ -53,10 +53,7 @@
     </section>
 
     <footer>
-        <button id="left">👈🏼</button>
-        <p id="vibeName"></p>
-        <button id="right">👉🏼</button>
-        <p>✨Change your aesthetic✨</p>
+        <button id="footerMsg">Click here to change the ✨vibe✨</button>
     </footer>
     </main>
     <script src="src/index.js">
