--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
     <section id="temperature-block" class="card">
         <h2 id="temperature-title" class="text">Temperature</h2>
         <section id="temperature-interact" class="temp-card-container">
-            <button id="increase-temp">⬆️</button>
+            <button id="increase-temp" class="temp-button">
+                <img src="assets/up.png" height="30px" width="30px"/>
+            </button>
             <p id="temperature-display" class="text">72°</p>
-            <button id="decrease-temp">⬇️</button>
+            <button id="decrease-temp" class="temp-button">
+                <img src="assets/down.png" height="30px" width="30px"/>
+            </button>
         </section>
     </section>
     <section id="sky-select-block" class="card">
