--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 <body>
     <div class="container">
         <div class="box1">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+           <h1> 1 Weather Report</h1>
         </div>
-        <div class="box2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam iure odit eos praesentium, cumque quo, quia totam provident fuga deleniti nemo, a magnam aperiam necessitatibus maiores itaque. Eveniet, perspiciatis adipisci.
-
+        <div class="box2">
+            <p> 2 For the lovely city of ✨My Hometown✨</p>
         </div>
         <div class="box3">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            <h3>3 Temperature</h3> 
         </div>
-        <div class="box4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam iure odit eos praesentium, cumque quo, quia totam provident fuga deleniti nemo, a magnam aperiam necessitatibus maiores itaque. Eveniet, perspiciatis adipisci.
-
+        <div class="box4">
+            <h3>5 Sky .</h3> 
         </div>
         <div class="box5">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            <h3>City Name</h3> 
         </div>
-        <div class="box6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam iure odit eos praesentium, cumque quo, quia totam provident fuga deleniti nemo, a magnam aperiam necessitatibus maiores itaque. Eveniet, perspiciatis adipisci.
-
+        <div class="box6">
+            <h3>4 Weather Garden.</h3> 
         </div>
     </div> 
     
