restractures the DOM

--- a/index.html
+++ b/index.html
@@ -31,10 +31,14 @@
             <input id="city" type="text" placeholder="Enter City Name"/>
             <input id="addResetButton" type="reset"/>
         </div>
-        <div class="features" id="gardenContainer">
+        <di class="features" id="weather">
             <p class="garden">Weather Garden</p>
-            <section id="displayFeature"></section>
+        </di>
+        <div class="features" id="gardenContainer">
             <section id="displayWeather"></section>
+            <br>
+            <br>
+            <section id="displayFeature"></section>
         </div>
         
         </div>
