adds js to change location in title

--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
     </section>
 
     <section id="locationsZone">
-        <select name="locations" id="locations">
-            <optgroup label="SoCal Locations">
-                <!-- <option id="santa monica">Santa Monica</option> -->
+        <select name="locations" class="locations">
+            <optgroup label="SoCal Locations" id="soCalLocations">
                 <option id="first_option" value="" disabled selected hidden>select a location...</option>
-                <option id="muscle_beach">Muscle Beach</option>
-                <option id="disneyland">Disneyland</option>
-                <option id="lax">LAX</option>
-            </optgroup>
+                <option value="Muscle Beach🏋️ ">Muscle Beach</option>
+                <option value="Disneyland🎢 ">Disneyland</option>
+                <option id="lax" value="LAX🛫">LAX</option>
+            <!-- </optgroup> -->
         </select>
     </section>
 <!-- add some CSS here so the buttons look cool! -->
@@ -52,8 +51,8 @@
                 <!-- <img src="assets/mickey.gif" id="mickey"> -->
             </section>
             <section id="cloud">
-                <img src="assets/sunny_cloud.gif" alt="white cloud with smiling face softly bobs a bit" id="sunny_cloud">
-                <!-- <img src="assets/stormy_cloud.gif" alt="dark grey and blue cloud with devious facial expression rains down water and lightning" id="stormy_cloud"> -->
+                <!-- <img src="assets/sunny_cloud.gif" alt="white cloud with smiling face softly bobs a bit" id="sunny_cloud"> -->
+                <img src="assets/stormy_cloud.gif" alt="dark grey and blue cloud with devious facial expression rains down water and lightning" id="stormy_cloud">
                 <!-- <img src="assets/windy_cloud.gif" alt="white cloud with smiling face softly bobs a bit" id="windy_cloud"> -->
             </section>
 
