--- a/index.html
+++ b/index.html
@@ -9,25 +9,31 @@
 </head>
 <body>
     <div class="container">
-        <div class="box1">
+        <div id="box1">
            <h1> 1 Weather Report</h1>
         </div>
-        <div class="box2">
+        <div id="box2">
             <p> 2 For the lovely city of ✨My Hometown✨</p>
         </div>
-        <div class="box3">
+        <div id="box3" class="input-boxes">
             <h3>3 Temperature</h3> 
+            <section>
+                <button id="increaseTempButton">⬆️</button>
+                <button id="decreaseTempButton">⬇️</button>
+            </section>
+            <section id="temperature">Temp:</section>
         </div>
-        <div class="box4">
-            <h3>5 Sky .</h3> 
+        <div id="box4">
+            <h3>4 Sky .</h3> 
         </div>
-        <div class="box5">
-            <h3>City Name</h3> 
+        <div id="box5">
+            <h3>5 City Name</h3> 
         </div>
-        <div class="box6">
-            <h3>4 Weather Garden.</h3> 
+        <div id="box6">
+            <h3>6 Weather Garden.</h3> 
         </div>
     </div> 
+    <script src="src/index.js"></script>
     
 </body>
 </html>
